--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,9 @@
-Flask
-pyrogram==2.0.106
+pyrogram
 tgcrypto
-telethon
-telethon-tgcrypto
-python-dotenv
-psutil
-aiofiles
-aiohttp
-motor
-pymongo
-pytz
-Pillow
+flask
 werkzeug==2.2.2
-mutagen
-yt-dlp
+aiohttp
 requests
+pymongo
+motor
 cryptography
